fix (x scrollbar): fix overflow x problem

--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -4,4 +4,6 @@ html, body, #root{
 
 body{
   margin: 0;
+  
+  overflow-x: hidden;
 }
